# Accelerated-CA-SYCL

./: .gitignore  CMakeLists.txt  README.md  ca_main.cxx
include/: config.h
